--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "msu-automated-classroom-attendance",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,27 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.0",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
-    "react-native-gesture-handler": "~2.16.0",
-    "react-native-reanimated": "~3.10.0",
-    "react-native-screens": "~3.31.0",
-    "react-native-safe-area-context": "4.10.1",
-    "expo-linear-gradient": "~13.0.2",
-    "axios": "^1.6.5",
-    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.7.9",
+    "expo": "^54.0.0",
+    "expo-barcode-scanner": "~14.0.0",
+    "expo-camera": "~16.0.0",
+    "expo-linear-gradient": "~14.0.0",
+    "expo-status-bar": "~3.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.0",
+    "react-native-gesture-handler": "~2.22.0",
     "react-native-qrcode-svg": "^6.3.0",
-    "expo-camera": "~15.0.5",
-    "expo-barcode-scanner": "~13.0.1"
+    "react-native-reanimated": "~4.0.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.23.5",
+    "babel-preset-expo": "^54.0.0"
   },
   "private": true
 }
